add signalr realtime charts
